<resources>
    <string name="app_name">Lounge</string>

    <!--Nav strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Contact</string>

    <!--Menu strings-->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_steps">Steps</string>
    <string name="menu_contact">Contact</string>

    <!--Login Activity strings-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="messageLoading">Please wait while we Connect to the Server...</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User ID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!--Alarm Fragment strings-->
    <string name="notification_title">Nap timer</string>
    <string name="notification_text">Countdown complete!</string>
    <string name="nap_prompt">How long would you like to nap?</string>
    <string name="alarm_finish">Nap over, get up!</string>
    <string name="alarm_notification_channel_id" translatable="false">alarm_channel</string>
    <string name="alarm_notification_channel_name" translatable="true">Alarm</string>
    <string name="timer_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="timer_notification_channel_name" translatable="true">Timer</string>
    <string name="snooze">Snooze</string>
    <string name="timer_notification_channel_description">Nap reminder</string>

    <!--Steps Fragment strings-->
    <string name="step_header">Today\'s Step Count: </string>
    <string name="step_total">Click below for today\'s step count!</string>
    <string name="refresh_button">Refresh!</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">OK</string>

    <!--Splash strings-->
    <string name="intro_message">Developed by Kevin Grimes</string>

</resources>