<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notes.NotesFragment">

    <TextView
        android:id="@+id/text_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_activity_view" />
    <RelativeLayout
        android:id="@+id/main_activity_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/step_total_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:text="@string/step_header"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/step_total_text_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/step_total_text_view"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/step_total"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step_total_text_view2"
            android:text="@string/refresh_button"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"/>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_marginTop="30dp"
            app:cpb_background_progressbar_color="@color/colorShade"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/colorPrimary"
            app:cpb_progressbar_width="20dp"
            app:cpb_round_border="true" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>